apps/production/monitoring/otel-collector/otel-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector

spec:
  type: ClusterIP
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: otlp-grpc
    - name: otlp-http
      port: 4318
      targetPort: otlp-http
    - name: prom-exporter
      port: 8889
      targetPort: prom-exporter
  selector:
    app: otel-collector
